1.UI框架细化 2.tab样式使用fittime资源 3.cardview需要兼容preL,设置好两个参数就ok 4.title使用页面总体布局配合实现header的阴影。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
         android:theme="@style/Theme.AppTheme">
         <activity
             android:name=".base.MainTabActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -67,7 +68,7 @@
         <activity android:name=".business.a.ui.act.BActivity"></activity>
         <activity android:name=".business.a.ui.act.ADetailActivity"></activity>
         <activity android:name=".business.jiongtu.ui.act.JiongtuActivity"></activity>
-        <activity android:name=".business.jiongtu.ui.act.JiongTuDetailActivity" android:hardwareAccelerated="false" ></activity>
+        <activity android:name=".business.jiongtu.ui.act.JiongTuDetailActivity" android:hardwareAccelerated="true" ></activity>
 
         <provider
             android:name="com.cyou.model.library.net.RequestCacheProvider"
