1使用potato中的library。业务工程中不要修改library内容。 2.library修改，只通过potatoframework工程来维护。其他工程只能使用。

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', 'library', ':Gpu-Image', ':ImageViewTouch'
+include ':app', ':Gpu-Image', ':ImageViewTouch',':librarygithub'
+project(':librarygithub').projectDir = new File('../potato_framework/library')
