--- a/tuya/android/project/trunk/app/build.gradle
+++ b/tuya/android/project/trunk/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
+    compile project(':librarygithub')
     compile project(':Gpu-Image')
     compile project(':ImageViewTouch')
     compile 'com.jakewharton:butterknife:6.1.0'
