--- a/tuya/android/project/trunk/settings.gradle
+++ b/tuya/android/project/trunk/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', 'library', ':Gpu-Image', ':ImageViewTouch'
+include ':app', ':Gpu-Image', ':ImageViewTouch',':librarygithub'
+project(':librarygithub').projectDir = new File('../potato_framework/library')
