1.添加了帖子ui 2.调整了项目结构

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
 
         <!--相机贴纸相关业务-->
         <activity android:name="com.potato.sticker.camera.ui.act.AlbumActivity"></activity>
+        <activity android:name="com.potato.sticker.camera.ui.act.CameraAlbumActivity"></activity>
         <activity android:name="com.potato.sticker.camera.ui.act.CameraActivity"></activity>
         <activity android:name="com.potato.sticker.camera.ui.act.CropPhotoActivity"></activity>
         <activity android:name="com.potato.sticker.camera.ui.act.EditTextActivity"></activity>
