--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
 include ':app', ':Gpu-Image', ':ImageViewTouch',':librarygithub'
 project(':librarygithub').projectDir = new File('../potato_framework/library')
+include ':librarygithub_demo'
+project(':librarygithub_demo').projectDir = new File('../potato_framework/app')
