--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,8 @@
         <!--main-->
         <activity android:name="com.potato.sticker.main.ui.act.MainTabActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserTopicActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.AllTopicActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.UserActivity"></activity>
         <!--登录 注册-->
         <activity android:name="com.potato.sticker.login.ui.act.LoginActivity"></activity>
 
