--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,8 +74,10 @@
         <activity android:name="com.potato.sticker.main.ui.act.MainTabActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserTopicActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.AllTopicActivity"></activity>
-        <activity android:name="com.potato.sticker.main.ui.act.UserActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.MyActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.TopicDetailActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.ClassifyActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.UserInfoActivity"></activity>
         <!--登录 注册-->
         <activity android:name="com.potato.sticker.login.ui.act.LoginActivity"></activity>
 
