1.消息页 2.ui调整 3.关注、粉丝列表 4.user详情页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,8 @@
         <activity android:name="com.potato.sticker.main.ui.act.TopicDetailActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.ClassifyActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserInfoActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.MsgActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.UserListActivity"></activity>
         <!--登录 注册-->
         <activity android:name="com.potato.sticker.login.ui.act.LoginActivity"></activity>
 
