1.去掉了中间那个活动预留页 2.调整了首页内容 3.去掉了分类页，加入了关于个人相关的各种帖子列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,11 +74,12 @@
 
         <!--main-->
         <activity android:name="com.potato.sticker.main.ui.act.MainTabActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.HomeActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserTopicActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.AllTopicActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.MyActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.TopicDetailActivity"></activity>
-        <activity android:name="com.potato.sticker.main.ui.act.ClassifyActivity"></activity>
+        <activity android:name="com.potato.sticker.main.ui.act.PersenalActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserInfoActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.MsgActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserListActivity"></activity>
