1第一页改为不分类，是所有帖子 2.第二页是分类 3.第三页是与我相关的

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
 
         <!--main-->
         <activity android:name="com.potato.sticker.main.ui.act.MainTabActivity"></activity>
-        <activity android:name="com.potato.sticker.main.ui.act.HomeActivity"></activity>
+        <activity android:name=".main.ui.act.ClassifyActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.UserTopicActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.AllTopicActivity"></activity>
         <activity android:name="com.potato.sticker.main.ui.act.MyActivity"></activity>
