--- a/Gpu-Image/build.gradle
+++ b/Gpu-Image/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
-
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         minSdkVersion 9
@@ -32,4 +31,6 @@ android {
         abortOnError false
     }
 
+}
+dependencies {
 }
