--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.cyou.sticker"
         minSdkVersion 16
@@ -23,11 +24,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':Gpu-Image')
-    compile project(':ImageViewTouch')
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.qiniu:qiniu-android-sdk:7.0.0'
+    compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
     compile project(':librarygithub')
 }
