1.图片渲染lib工程，使用jcenter中的库，直接从gradle中配置依赖

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,2 @@
-include ':app', ':Gpu-Image',':librarygithub'
+include ':app',':librarygithub'
 project(':librarygithub').projectDir = new File('../potato_framework/library')
-include ':librarygithub_demo'
-project(':librarygithub_demo').projectDir = new File('../potato_framework/app')
