--- a/Gpu-Image/build.gradle
+++ b/Gpu-Image/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'com.android.library'
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.1'
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 16
         targetSdkVersion 23
-
-        versionCode = 1
-        versionName = "1.0"
-
+        versionCode 1
+        versionName "1.0"
     }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    useLibrary 'org.apache.http.legacy'
 
     sourceSets {
         main {
@@ -21,14 +26,8 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
-            jni.srcDirs = ['jni']
         }
 
-        instrumentTest.setRoot('tests')
-    }
-
-    lintOptions {
-        abortOnError false
     }
 
 }
