--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,17 +18,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':Gpu-Image')
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.qiniu:qiniu-android-sdk:7.0.0'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile project(':librarygithub')
 }
